--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html-template-tag": "^1.0.0",
     "morgan": "^1.9.0",
     "node-time-ago": "^1.0.0",
-    "pg": "^8.3.0"
+    "pg": "^8.3.0",
+    "sequelize": "^6.25.7"
   }
 }
